Change the way import XESLite from embedded copy to Maven Central